--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -399,7 +399,7 @@
           "header_sub_menu": "main-menu",
           "header_mobile_menu": "mobile-menu",
           "header_notification": true,
-          "header_notification_title": "Free Shipping - Over $150\n<br>\nAlerta Find (Subscription) : Only $9.99\/month",
+          "header_notification_title": "Free Shipping - Over $10000050\n<br>\nAlerta Find (Subscription) : Only $9.99\/month",
           "header_notification_action": "SHOP NOW",
           "header_notification_link": "\/products\/alerta-find-subscription"
         }
